@@ -4,3 +4,8 @@
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
+
+PYTHON_PACKAGES := sl2d
+
+$(patsubst %,binary-install/%,$(PYTHON_PACKAGES)) ::
+	dh_pycentral -p$(cdbs_curpkg)
